# Simulasi-Gazebo-Darnet

./: README.md
src/: Note.txt
src/darnet_controller_test/: package.xml  setup.py
src/darnet_controller_test/config/: joint_controller.yaml
src/darnet_controller_test/darnet_controller_test/: Bangkit.py  joint_publisher.py
src/darnet_description/: package.xml  setup.cfg  setup.py
src/darnet_description/config/: joint_controller.yaml  rvizuntukdarnet.rviz
src/darnet_description/darnet_description/: ArcheryArmsOnly.py  ArcheryPose.py  Bangkit.py  Camera_testing.py  Centerized.py  CheckStatusServo.py  ComsROS2DARPUTbyJetson.py  ComsROS2OpenRB.py  ComsROS2OpenRBDARPUT.py  InteractiveMarkerForCordinates.py  Jalan.py  Jalan_Launcher.py  PinnochioIK.py  SineWaveTarget.py  SingleArmTest.py  Testing.py  Testing2.py  Testing3.py
src/darnet_description/launch/: display.launch.py  gazebo.launch.py
src/darnet_description/meshes/: Betis_1.stl  Betis_2.stl  Kaki_Kanan_1.stl  Kaki_Kiri_1.stl  Kepala_4.stl  Konektor_Bahu__1.stl  Konektor_Bahu__3.stl  Konektor_Leher_1.stl  Lengan_Kanan_1.stl  Lengan_Kiri_1.stl  Lutut_Kanan_1.stl  Lutut_Kiri__1.stl  Mata_Kaki_Kanan_1.stl  Mata_Kaki_Kiri_1.stl  Paha_Atas_3.stl  Paha_Atas_4.stl  Paha_Kanan_1.stl  Paha_Kiri_1.stl  Tangan_Kanan_1.stl  Tangan_Kiri_1.stl  base_link.stl
src/darnet_description/urdf/: darnet.gazebo  darnet.trans  darnet.xacro  materials.xacro
src/darnet_igz/: package.xml  setup.cfg  setup.py
src/darnetnew_description/: setup.py
test_sdf/: building_robot.sdf  count_inertia.py
(+110 files in other folders)
