<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
<name>darnet_description</name>
  <version>0.0.0</version>
<description>The darnet_description package</description>
  <maintainer email="todo@todo.com">author</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>pinocchio</depend>

  <exec_depend>ros2_control</exec_depend>
  <exec_depend>ros2_controllers</exec_depend>
  <exec_depend>ign_ros2_control</exec_depend>
  <exec_depend>python3-pinocchio</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  

  <depend>trajectory_msgs</depend>
  <depend>builtin_interfaces</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
